# neural-bumps

./: .gitignore  CITATION.cff  CLAUDE.md  LICENCE  README.md  pyproject.toml  requirements.txt
.claude/docs/: architectural_patterns.md
config/: default.yaml
neural_field/: __init__.py
neural_field/analysis/: __init__.py  stability.py  validation.py
neural_field/config/: __init__.py  enums.py  loader.py  params.py
neural_field/core/: __init__.py  grid.py  math.py  results.py
neural_field/io/: __init__.py  data.py  paths.py
neural_field/kernels/: __init__.py  base.py  cross.py  factory.py  lateral.py  physics.py
neural_field/simulation/: __init__.py  base.py  factory.py  full.py  simplified.py  tracking.py
neural_field/visualization/: __init__.py  analysis.py  kernels.py  simulation.py
notebooks/: neural_field.ipynb
